Fixed alignment and button color

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,10 +1,17 @@
-:root {
-    
-    /* These examples use the same color: sienna. */
-    --ion-text-color:             #a0522d;
-    --ion-text-color-rgb:         160, 82, 45;
-  
-    /* These examples use the same color: lightsteelblue. */
-    --ion-background-color:       #b0c4de;
-    --ion-background-color-rgb:   176, 196, 222;
+body {
+    color: #3d3d3d;
+}
+
+button {
+    margin: 0.5em;
+    padding: 1em;
+    border-radius: 5px;
+    font-size: 1em;
+    color: #f2f2f2;
+    background-color: #e36307;
+}
+
+.form {
+    width: 80%;
+    margin: auto;
 }
